<resources>
    <string name="app_name">Owner</string>

    <!-- Menu title -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_transactions">Transaction</string>
    <string name="title_history">History</string>
    <string name="title_account">Account</string>

    <string name="intro_login">Harapan kami adalah membantu untuk kesuksesan bisnia anda</string>

    <!-- Label Form -->
    <string name="label_no_handphone">No Handphone</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Konfirmasi Password</string>
    <string name="label_alamat">Alamat</string>
    <string name="label_nama">Nama</string>
    <string name="label_register">Register</string>
    <string name="label_login">Login</string>
    <string name="label_create_account">Create Account</string>
    <string name="lbl_logout">Logout</string>
    <!-- ! -->

    <!-- Helper Text -->
    <string name="helper_no_handphone">Masukkan Nomor Handphone Anda.</string>
    <string name="helper_password">Masukkan Password Anda.</string>
    <string name="helper_confirm_password">Masukkan Konfirmasi Password.</string>
    <string name="helper_alamat">Masukkan Alamat Anda.</string>
    <string name="helper_nama">Masukkan Nama Lengkap Anda.</string>

    <!-- Warning Form -->
    <string name="warning_empty">Form ini harus di isi.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_save">Simpan</string>
    <string name="label_price">Harga</string>
    <string name="label_kelas">Kelas</string>
    <string name="label_tipe">Tipe</string>
</resources>
