<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ac.id.polinema.owner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="ac.id.polinema.owner.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="ac.id.polinema.owner.ui.histroy.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_price"
        android:name="ac.id.polinema.owner.ui.price.PriceFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_price" >
        <action
            android:id="@+id/home_to_editPriceActivity"
            app:destination="@id/editPriceActivity" />
    </fragment>
    <activity
        android:id="@+id/editPriceActivity"
        android:name="ac.id.polinema.owner.ui.price.EditPriceActivity"
        android:label="activity_edit_price"
        tools:layout="@layout/activity_edit_price" >
        <argument
            android:name="data_price"
            app:argType="ac.id.polinema.owner.model.PriceModel"
            app:nullable="true"
            android:defaultValue="@null" />
    </activity>

</navigation>
