<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.price.EditPriceActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtlayout_tipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:theme="@style/AuthTextInputLayout"
        app:helperText="Masukkan Tipe Cucian"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_tipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/primary_text_light"
            android:textColor="@android:color/primary_text_light"
            android:hint="@string/label_tipe" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtlayout_kelas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:theme="@style/AuthTextInputLayout"
        app:helperText="Masukkan Kelas Cucian"
        app:layout_constraintTop_toBottomOf="@+id/edtlayout_tipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_kelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/primary_text_light"
            android:textColor="@android:color/primary_text_light"
            android:hint="@string/label_kelas" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtlayout_harga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:theme="@style/AuthTextInputLayout"
        app:helperText="Masukkan Harga / kg Cucian"
        app:layout_constraintTop_toBottomOf="@id/edtlayout_kelas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/primary_text_light"
            android:textColor="@android:color/primary_text_light"
            android:hint="@string/label_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_save"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/edtlayout_harga"
        app:layout_constraintStart_toStartOf="@id/edtlayout_harga"
        app:layout_constraintEnd_toEndOf="@id/edtlayout_harga" />
</androidx.constraintlayout.widget.ConstraintLayout>